Archive2/d4/32cba3a517ddd4/output
main.cpp:15:5: error: member function 'foo' not viable: 'this' argument has type 'const Bar', but function is not marked const
    p->foo();
    ^
main.cpp:8:10: note: 'foo' declared here
    void foo() { x++; }
         ^
1 error generated.
